src/components/Options/style.module.css
.menu {
	position: fixed;
	z-index: 200;
	width: 100vw;
	inset: 0;
	visibility: hidden;
}

.menu.is-visible {
	visibility: visible;
}

.content-container {
	position: relative;
	height: calc(100vh - 7rem);
	overflow-y: auto;
	overflow-x: hidden;
}

.content {
	background: linear-gradient(180deg, #cfd9df 0%, #e2ebf0 100%);
	display: flex;
	width: 100%;
	height: 100%;
	justify-content: center;
	align-content: center;
	flex-direction: column;
	transform: translateY(-100%);
	transition: all var(--animation-duration-options)
		var(--animation-timing-options);
}

.panel {
	position: absolute;
	display: flex;
	width: 100%;
	height: 100%;
	justify-content: center;
	align-content: center;
	flex-direction: column;
	align-items: center;
	color: var(--color-options-panel-text);
}

.is-visible .content {
	transform: translateY(0);
}

.slide-enter {
	transform: translateX(-100%);
	opacity: 0;
}

.slide-enter-active {
	transform: translateX(0);
	opacity: 1;
	transition:
		transform 0.5s ease,
		opacity 0.5s ease;
}

.slide-exit {
	transform: translateX(0);
	opacity: 1;
}

.slide-exit-active {
	transform: translateX(100%);
	opacity: 0;
	transition:
		transform 0.5s ease,
		opacity 0.5s ease;
}

/* TODO: vars for colors and animation durations */

